--- a/by.Reba/by.Reba.Application/Views/Article/_CreateOrEditArticlePartial.cshtml
+++ b/by.Reba/by.Reba.Application/Views/Article/_CreateOrEditArticlePartial.cshtml
@@ -1,5 +1,6 @@
 ﻿@using by.Reba.Application.Models.Article
-@model CreateOrEditVM
+
+@model CreateOrEditArticleVM
 
 <div class="d-flex flex-column gap-3 col-12 offset-0 col-sm-10 offset-sm-1 col-md-8 offset-md-2 col-lg-6 offset-lg-3">
     <input asp-for="Id" type="hidden"/>
