--- a/by.Reba/by.Reba.Application/Views/Shared/_AdminAside.cshtml
+++ b/by.Reba/by.Reba.Application/Views/Shared/_AdminAside.cshtml
@@ -1,10 +1,8 @@
-﻿<div>
-    <ul class="d-flex flex-column nav text-success fw-bold">
-        <li class="px-1 pt-2 px-sm-3 pt-sm-3"><a class="text-success" href="/hangfire">Hangfire</a></li>
-        <hr />
-        <li class="px-1 px-sm-3"><a class="text-success" asp-controller="Article" asp-action="Grid">Новости</a></li>
-        <li class="px-1 px-sm-3 pt-2 pt-sm-3"><a class="text-success" asp-controller="Account" asp-action="Grid">Пользователи</a></li>
-        <li class="px-1 px-sm-3 pt-2 pt-sm-3"><a class="text-success" asp-controller="Source" asp-action="Grid">Источники</a></li>
-        <li class="px-1 px-sm-3 pt-2 pt-sm-3"><a class="text-success" asp-controller="Positivity" asp-action="Grid">Позитивности</a></li>
-    </ul>
-</div>
+﻿<ul class="d-flex flex-column nav text-success fw-bold">
+    <li class="px-1 pt-2 px-sm-3 pt-sm-3"><a class="text-success" href="/hangfire">Hangfire</a></li>
+    <hr />
+    <li class="px-1 px-sm-3"><a class="text-success" asp-controller="Article" asp-action="Grid">Новости</a></li>
+    <li class="px-1 px-sm-3 pt-2 pt-sm-3"><a class="text-success" asp-controller="Account" asp-action="Grid">Пользователи</a></li>
+    <li class="px-1 px-sm-3 pt-2 pt-sm-3"><a class="text-success" asp-controller="Source" asp-action="Grid">Источники</a></li>
+    <li class="px-1 px-sm-3 pt-2 pt-sm-3"><a class="text-success" asp-controller="Positivity" asp-action="Grid">Позитивности</a></li>
+</ul>
