--- a/by.Reba/by.Reba.Application/Views/Shared/_EnterPagePartial.cshtml
+++ b/by.Reba/by.Reba.Application/Views/Shared/_EnterPagePartial.cshtml
@@ -1,6 +1,6 @@
 ﻿@model string
 
-<div class="modal fade text-success" id="@Model" aria-labelledby="exampleModalLabel">
+<div class="modal fade text-success" id="@Model">
     <div class="modal-dialog modal-dialog-centered">
         <div class="modal-content bg-lightgrey">
             <div class="modal-header">
