--- a/by.Reba/by.Reba.Application/Views/Article/Edit.cshtml
+++ b/by.Reba/by.Reba.Application/Views/Article/Edit.cshtml
@@ -1,11 +1,11 @@
 ﻿@using by.Reba.Application.Models.Article
 
-@model CreateOrEditVM
+@model CreateOrEditArticleVM
 
 @{
     ViewData["Title"] = "Редактировать новость";
     Layout = "_AdminLayout";
 }
 <form asp-controller="Article" asp-action="Edit" method="post">
-    <partial name="_CreateOrEditPartial" model="@Model"></partial>
+    <partial name="_CreateOrEditArticlePartial" model="@Model"></partial>
 </form>
