--- a/by.Reba/by.Reba.Application/Views/Shared/_AllPositivitiesWithSelectedByPreference.cshtml
+++ b/by.Reba/by.Reba.Application/Views/Shared/_AllPositivitiesWithSelectedByPreference.cshtml
@@ -6,7 +6,7 @@
     @foreach (var rating in Model.Positivities)
     {
         <li class="list-group-item bg-lightgrey">
-            <input class="form-check-input" type="radio" name="@nameof(Model.MinPositivity)" checked="@rating.Selected" value="@rating.Value" id="@($"radio{rating.Value}")">
+            <input class="form-check-input" type="radio" name="@Model.MinPositivityName" checked="@rating.Selected" value="@rating.Value" id="@($"radio{rating.Value}")">
             <label for="@($"radio{rating.Value}")" class="form-check-label ms-3">@rating.Text</label>
         </li>
     }
