--- a/by.Reba/by.Reba.Application/Views/Article/Index.cshtml
+++ b/by.Reba/by.Reba.Application/Views/Article/Index.cshtml
@@ -20,7 +20,7 @@
         <partial name="_ArticleFilterPartial" model="@Model.FilterData"></partial>
     </div>
 
-    <div class="btn-group d-flex justify-content-center flex-wrap flex-sm-nowrap m-1 m-sm-3">
+    <div class="btn-group d-flex justify-content-center flex-wrap flex-sm-nowrap mx-2 my-4">
         <button type="submit" class="btn btn-success rounded-0 @(Model.SortOrder.Equals(ArticleSort.PublicationDate) ? "active" : "")" name="sortOrder" value="@ArticleSort.PublicationDate">Новое</button>
         <button type="submit" class="btn btn-success rounded-0 @(Model.SortOrder.Equals(ArticleSort.Likes) ? "active" : "")" name="sortOrder" value="@ArticleSort.Likes">Самое понравившееся</button>
         <button type="submit" class="btn btn-success rounded-0 @(Model.SortOrder.Equals(ArticleSort.Comments) ? "active" : "")" name="sortOrder" value="@ArticleSort.Comments">Самое обсуждаемое</button>
@@ -29,7 +29,7 @@
 
 @if (Model.Articles.Any())
     {
-        <div class="row row-cols-sm-2 row-cols-lg-3 row-cols-xl-4 g-1 g-sm-3 g-md-4">
+        <div class="row row-cols-sm-2 row-cols-lg-3 row-cols-xl-4 g-3 g-sm-4 g-md-5">
             @foreach (var article in Model.Articles)
             {
                 <partial name="_ArticlePreviewPartial" model="@article"></partial>
