--- a/by.Reba/by.Reba.Application/wwwroot/css/site.css
+++ b/by.Reba/by.Reba.Application/wwwroot/css/site.css
@@ -22,6 +22,10 @@ html {
     .comment-footer {
         display: none;
     }
+
+    .article-card:hover {
+        transform: scale(1.05);
+    }
 }
 
 @media (min-width: 768px) {
@@ -162,4 +166,23 @@ a:hover {
 .page-item:last-child .page-link {
     border-top-right-radius: 10px;
     border-bottom-right-radius: 10px;
+}
+
+.article-card {
+    box-shadow: 4px 4px 8px 0px rgba(52, 58, 64, 0.5);
+    transition: all 0.25s ease-in;
+    position: relative;
+}
+
+.article-card::before {
+    content: "";
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    opacity: 0;
+    background-color: #198754;
+}
+
+.article-card:hover:before {
+    opacity: 0.15;
 }
