Change naming in dtos

--- a/by.Reba/by.Reba.Application/Views/Article/Grid.cshtml
+++ b/by.Reba/by.Reba.Application/Views/Article/Grid.cshtml
@@ -59,7 +59,7 @@
                         <td>@article.PublicationDate.ToString("dd MMMM HH:mm", new CultureInfo("ru-RU"))</td>
                         <td>@article.CategoryName</td>
                         <td>@article.SourceName</td>
-                        <td>@article.RatingName</td>
+                        <td>@article.PositivityName</td>
                         <td>@article.Assessment</td>
                         <td>@article.CommentsCount</td>
                         <td>
