--- a/by.Reba/by.Reba.Application/Views/Shared/_LayoutFooter.cshtml
+++ b/by.Reba/by.Reba.Application/Views/Shared/_LayoutFooter.cshtml
@@ -1,4 +1,4 @@
-﻿<footer class="border-top footer fixed-bottom bg-secondary">
+﻿<footer class="d-flex flex-row border-top footer fixed-bottom bg-secondary">
     <div class="container text-light text-center">
         &copy; @DateTime.Now.ToString("MMMM yyyy") - Reba.by
     </div>
