--- a/by.Reba/by.Reba.Application/Views/Preference/Edit.cshtml
+++ b/by.Reba/by.Reba.Application/Views/Preference/Edit.cshtml
@@ -14,6 +14,9 @@
 <form asp-controller="Preference" asp-action="Edit" method="post">
     <input type="hidden" name="@nameof(Model.Id)" value="@Model.Id"/>
 
+    <div class="d-flex justify-content-center">
+        <small class="text-muted ps-3">Предпочтения можно настроить позже в настройках.</small>
+    </div>
     <div class="d-flex flex-column justify-content-center flex-sm-row align-items-sm-start gap-1 gap-lg-5">
         <div class="d-flex flex-column pe-1 justify-content-center">
             <h5 class="text-center my-3">Любимые категории:</h5>
@@ -25,9 +28,6 @@
             <partial name="_AllPositivitiesWithSelectedByPreference" model="@new AllPositivitiesVM() { MinPositivityName = nameof(Model.RatingId), Positivities = Model.AllRatings}"></partial>
         </div>
     </div>
-
-    <small class="text-muted ps-3">Предпочтения можно настроить позже в настройках.</small>
-
     <div class="form-group pt-3 px-5">
         <button type="submit" class="btn btn-success col-12 col-md-6 offset-md-3 col-lg-8 offset-lg-2">Далее</button>
     </div>
